*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@672 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/estimates.css
+++ b/WebContent/estimates.css
@@ -83,11 +83,11 @@ div.event-line-graph {
 	-background-color: #EEFFFF; }
 	
 div.event-line-selector {
-	-moz-opacity: 0.5;
+	-moz-opacity: 0.3;
 	background-color: #F1E7C8; }
 
 div.event-line-indicator {
-	-moz-opacity: 0.1;
+	-moz-opacity: 0.3;
 	background-color: #333333; }
 	
 div.event-line-indicator-container {
@@ -185,3 +185,7 @@ div.event-line-events-title {
 	
 .color-timeline-imported-event {
 	background-color: #571B1D; }
+	
+div.event-line-graph-container,
+div.event-line-selector-container {
+	border: 1px solid #571B1D; }
