--- a/WebContent/gallery.css
+++ b/WebContent/gallery.css
@@ -30,7 +30,7 @@ div.gallery-thumbnail-title {
 	width: 150px; }
 	
 div.gallery-image {
-	margin-left: 35px; }
+	margin-left: 47px; }
 	
 td.gallery-image {
 	vertical-align: top; }
@@ -73,9 +73,13 @@ td.gallery-image-info-table-value {
 td.gallery-arrow-prev,
 td.gallery-arrow-next {
 	vertical-align: top;
-	padding-top: 45px;
-	width: 20px; }
+	padding-top: 45px; }
 	
+td.gallery-arrow-prev-page,
+td.gallery-arrow-next-page {
+	vertical-align: top;
+	padding-top: 45px; }
+
 td.gallery-arrow-prev {
 	text-align: right; }
 	
@@ -85,7 +89,7 @@ td.gallery-arrow-next {
 div.gallery-counter {	
 	margin-bottom: 2px;
 	margin-top: 10px;
-	margin-left: 35px; }	
+	margin-left: 47px; }	
 	
 	
 	
