*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@706 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/main-menu.css
+++ b/WebContent/styles/main-menu.css
@@ -1,4 +1,4 @@
-div.top-bar {
+div#top-bar {
 	background-image: url(../images/menu-bg.png);
 	background-repeat: no-repeat;
 	background-color: #008CA8; }
