*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@710 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/section-index.css
+++ b/WebContent/styles/section-index.css
@@ -34,3 +34,6 @@ div.section-index-intro-icon p.section-index-intro {
 div.section-index-intro-icon-title {
 	font-size: 12pt;
 	margin-left: 15px; }
+
+td.section-index-left-column table.box-main-table {
+	width: 280px; }
