--- a/WebContent/styles/database-expandable-box.css
+++ b/WebContent/styles/database-expandable-box.css
@@ -10,6 +10,15 @@ td.box-upper-row-middle {
 td.box-upper-row-right {
 	background-image: url(../images/database-box-title-right.png); }
 	
+td.box-upper-row-left-collapsed {
+	background-image: url(../images/database-box-title-left.png); }
+	
+td.box-upper-row-middle-collapsed {
+	background-image: url(../images/database-box-title-center.png); }
+
+td.box-upper-row-right-collapsed {
+	background-image: url(../images/database-box-title-right.png); }
+	
 td.box-middle-row-left {
 	background-image: url(../images/database-box-content-center.png); }
 	
