*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@715 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/search.css
+++ b/WebContent/styles/search.css
@@ -1,6 +1,7 @@
 /* main two pannels */
 
 td.side-panel {
+	background-image: url(../images/database-bg.png);
 	padding-top: 10px;
 	padding-bottom: 10px;
 	padding-left: 10px;
