*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@717 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/tabs.css
+++ b/WebContent/styles/tabs.css
@@ -1,6 +1,6 @@
 td.tabs-tab-left-selected,
 td.tabs-tab-left {
-	height: 26px;
+	height: 32px;
 	width: 10px;
 	background-position: left top;
 	background-repeat: no-repeat;
@@ -8,20 +8,25 @@ td.tabs-tab-left {
 
 td.tabs-tab-middle-selected,
 td.tabs-tab-middle {
-	text-align: left;
-	height: 26px;
+	text-align: center;
+	vertical-align: bottom !important;
+	height: 32px;
 	padding-top: 5px;
 	padding-bottom: 5px;
 	background-repeat: repeat-x; }
 
 td.tabs-tab-right-selected,
 td.tabs-tab-right {
-	height: 26px;
+	height: 32px;
 	width: 10px;
 	background-position: right top;
 	background-repeat: no-repeat;
 	overflow: hidden; }
 
 td.tabs-tab-filler {
-	width: 2px;
+	width: 5px;
+}
+
+td.tabs-tab-first-filler {
+	width: 10px;
 }
