--- a/WebContent/styles/search.css
+++ b/WebContent/styles/search.css
@@ -2,6 +2,9 @@
 
 td.side-panel {
 	background-image: url(../images/database-bg.png);
+	background-position: top left;
+	background-repeat: repeat-x;
+	border-right: 1px solid #895D03;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	padding-left: 10px;
@@ -10,13 +13,8 @@ td.side-panel {
 	vertical-align: top; }
 
 td.main-panel {
-	padding-top: 10px;
-	padding-bottom: 10px;
-	padding-left: 5px;
-	padding-right: 10px;
 	vertical-align: top; }
-
-
+	
 /* message */
 
 div.message-bar {
