--- a/WebContent/styles/main.css
+++ b/WebContent/styles/main.css
@@ -11,6 +11,12 @@ input, textarea, select {
 	font-size: 8pt; }
 
 
+h1 {
+	padding: 0px;
+	margin: 0px;
+	font-size: 16pt;
+	font-weight: normal; }
+
 /* header */
 /*
 div.header {
