*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@721 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/menu.css
+++ b/WebContent/styles/menu.css
@@ -1,6 +1,6 @@
 div.menu-popup-item-main {
 	cursor: pointer;
-	width: 285px;
+	/*width: 285px;*/
 	border: 0px solid Black;
 	border-bottom: 2px solid #F1E7C8;
 	padding-left: 10px;
