*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@722 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/database-expandable-box.css
+++ b/WebContent/styles/database-expandable-box.css
@@ -9,6 +9,7 @@ td.box-upper-row-left-collapsed {
 
 td.box-upper-row-middle,
 td.box-upper-row-middle-collapsed {
+	width: 270px;
 	background-image: url(../images/database-box-title-center.png); }
 
 td.box-upper-row-right {
