--- a/WebContent/styles/database.css
+++ b/WebContent/styles/database.css
@@ -1,19 +1,2 @@
-body {
-	background-position: 0px 105px;
-	background-image: url(../images/database-bg.png);
-	background-repeat: repeat-x; }
-	
-div#content {
-	border-top: 5px solid #8A5D04; }
-	
-td.section-index-right-column {
-	border-left-color: #8A5D04; }
-	
-div.section-index-intro-blank-icon {
-	background-image: url(../images/database-index-icon.png); }
-	
-div.section-index-intro-icon-title {
-	color: #8A5D04; }
-	
 a {
-	color: #8A5D04; }
+	color: Black; }
