*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@724 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/estimates.css
+++ b/WebContent/styles/estimates.css
@@ -1,3 +1,12 @@
+td.td-main-panel {
+	vertical-align: top; 
+	background-color: white;}
+	
+td.td-side-panel {
+	width: 240px; 
+	vertical-align: top;
+	border-right: 1px solid #115676;}
+
 div.estimates-table table.simple-table {
 	border-collapse: collapse; }
 	
