--- a/WebContent/styles/estimates.css
+++ b/WebContent/styles/estimates.css
@@ -6,6 +6,9 @@ td.td-side-panel {
 	width: 240px; 
 	vertical-align: top;
 	border-right: 1px solid #115676;}
+	
+div.results-panel {
+	padding: 10px;}
 
 div.estimates-table table.simple-table {
 	border-collapse: collapse; }
@@ -13,15 +16,15 @@ div.estimates-table table.simple-table {
 div.estimates-table table.simple-table td {
 	text-align: right;
 	padding: 5px;
-	border: 1px solid #DEC77E; }
+	border: 1px solid #115676; }
 	
 div.estimates-table table.simple-table td.tbl-label {
-	background-color: #F1E7C8;
+	background-color: #b4e6e6;
 	text-align: left; }
 
 div.estimates-table table.simple-table td.tbl-total {
 	font-weight: bold;
-	background-color: #F1E7C8; }
+	background-color: #b4e6e6; }
 
 div.estimates-table table.simple-table td.simple-table-row-label,
 div.estimates-table table.simple-table td.simple-table-col-label {
