--- a/WebContent/styles/sections.css
+++ b/WebContent/styles/sections.css
@@ -1,3 +1,5 @@
+/*
+
 div.section-title {
 	font-weight: bold; }
 
@@ -99,3 +101,5 @@ div.section-inside-footer {
 	margin-right: 10px;
 	padding-top: 10px;
 	padding-bottom: 10px; }
+
+*/
