--- a/WebContent/styles/database-search-table.css
+++ b/WebContent/styles/database-search-table.css
@@ -69,8 +69,7 @@ th.grid-first-column {
 	padding-left: 10px !important; }
 
 div.table-bottom-tools {
-	margin-top: 10px;
-	color: White; }
+	margin-top: 10px; }
 	
 div.pager a {
 	color: White; }
@@ -95,6 +94,7 @@ td.pager-back a,
 td.pager-fast-back a,
 td.pager-forward a,
 td.pager-fast-forward a {
+	color: Black;
 	text-decoration: none;
 	display: block;
 	padding: 2px 5px 2px 5px; }
@@ -118,3 +118,17 @@ td.pager-forward a:hover,
 td.pager-fast-back a:hover,
 td.pager-back a:hover	{
 	background-color: #EED083; }
+	
+div.database-configure-columns-pane {
+	padding-top: 10px;
+	padding-bottom: 10px;
+	margin-left: 0px;
+	margin-right: 10px;
+	border-top: 1px solid #EEDAA2;
+	border-bottom: 1px solid #EEDAA2; }
+
+div.database-configure-columns-buttons {
+	margin-left: 0px;
+	margin-right: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px; }
