*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@732 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/estimates-tab-listing.css
+++ b/WebContent/styles/estimates-tab-listing.css
@@ -70,13 +70,13 @@ th.grid-first-column {
 
 div.pager {
 	margin-top: 10px;
-	color: White; }
+	color: Black; }
 	
 div.pager a {
 	color: Black; }
 	
 div.pager select {
-	border: 0px; }
+	}
 	
 table.td-table-links {
 	margin-left: auto; }
