--- a/WebContent/styles/database-search-basic-stats.css
+++ b/WebContent/styles/database-search-basic-stats.css
@@ -6,7 +6,7 @@ div.search-panel table.simple-table td {
 	padding: 5px; }
 
 td.search-simple-stat-c_c1 {
-	background-color: #EED083; }
+	background-color: #ECD698; }
 	
 td.search-simple-stat-c_c2, td.search-simple-stat-c_c3, td.search-simple-stat-c_c4 {
 	text-align: right;
@@ -17,6 +17,6 @@ td.search-simple-stat-h_c1 {
 	text-align: center; }
 	
 td.search-simple-stat-h_c2, td.search-simple-stat-h_c3, td.search-simple-stat-h_c4 {
-	background-color: #EED083;
+	background-color: #ECD698;
 	font-weight: bold;
 	text-align: right; }
